header.xhtml and graphics.html is done!

--- a/src/main/webapp/templates/header.xhtml
+++ b/src/main/webapp/templates/header.xhtml
@@ -3,7 +3,23 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<body>
+<ui:composition>
+    <div class="left-header">
+        <div>Variant 5127</div>
+    </div>
+    <div class="center-header">
+        <div>Third laboratory work</div>
+        <div>Huang Siyuan and Kuznetsov Alexander P3211</div>
+    </div>
+    <div class="right-header">
+        <h:outputLink value="https://github.com/Darklol/Web003">
+            <div>
+                <h:graphicImage name="/pic/github-logo.jpeg" width="50" alt="github"
+                                class="round github"/>
+            </div>
+        </h:outputLink>
+    </div>
+</ui:composition>
+</body>
 </html>
