Now the table can support ajax. But we need to fix about clear the fields. I don't how to use js to set radio(. "checked = 'true'" doesn't work(

--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -11,7 +11,7 @@
     <title><ui:insert name="title"/></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/>
-<!--    <h:outputStylesheet name="main.css" library="css"/>-->
+    <h:outputStylesheet name="main.css" library="css"/>
     <h:outputScript library="primefaces" name="jquery/jquery.js" target="head"/>
 </h:head>
 
