Now button "Clear form is ok".Next step we need to fix draw points from table. And send request from svg.

--- a/src/main/webapp/templates/header.xhtml
+++ b/src/main/webapp/templates/header.xhtml
@@ -8,7 +8,7 @@
     <div class="left-header">
         <div>Variant 5127</div>
     </div>
-    <div class="center-header">
+    <div class="center-header header-panel">
         <div>Third laboratory work</div>
         <div>Huang Siyuan and Kuznetsov Alexander P3211</div>
     </div>
