Hibernate is working (on local DB) But main.xhtml is a mess

--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -10,11 +10,10 @@
 <h:head>
     <title><ui:insert name="title"/></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/>
     <h:outputStylesheet name="main.css" library="css"/>
 </h:head>
 
-<h:body styleClass="bg-dark">
+<h:body styleClass="bg-transparent">
     <div class="header">
         <ui:insert name="header"/>
     </div>
