--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -13,12 +13,12 @@
     <h:outputStylesheet name="main.css" library="css"/>
 </h:head>
 
-<h:body styleClass="bg-transparent">
+<h:body styleClass="bg-dark">
     <div class="header">
         <ui:insert name="header"/>
     </div>
 
-    <div class="content text-light">
+    <div class="content text-light text-center">
         <ui:insert name="content"/>
     </div>
 
