--- a/src/main/webapp/templates/header.xhtml
+++ b/src/main/webapp/templates/header.xhtml
@@ -5,17 +5,17 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
 <ui:composition>
-    <div class="left-header">
+    <div class="left-header rainbow-text">
         <div>Variant 5127</div>
     </div>
-    <div class="center-header header-panel">
+    <div class="center-header header-panel rainbow-text">
         <div>Third laboratory work</div>
         <div>Huang Siyuan and Kuznetsov Alexander P3211</div>
     </div>
     <div class="right-header">
         <h:outputLink value="https://github.com/Darklol/Web003">
             <div>
-                <h:graphicImage name="/pic/github-logo.jpeg" width="50" alt="github"
+                <h:graphicImage name="/pic/github-logo.png" width="50" alt="github"
                                 class="round github"/>
             </div>
         </h:outputLink>
